# NeopixelAmbilight

./: .gitignore  2. Naloga (Neobvezna).md  2. Naloga (Obvezna).md  2. Naloga VIN.md  README.md  Vprasanja.md
code/c/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  cmake_install.cmake  video1
code/c/bcm2835/bcm2835-1.58/: config.status
code/python/: image3.py  video1.py
docs/: NeopixelDriver.md
src/code/c/: Makefile  script.sh  video1.cpp  video2.cpp  video3.cpp
src/code/c/bcm2835/bcm2835-1.58/: Makefile
src/code/c/bcm2835/bcm2835-1.58/doc/: Makefile
src/code/c/bcm2835/bcm2835-1.58/src/: Makefile
src/code/c/spidev2/spidevpp/: CMakeLists.txt
src/code/python/: image.py  image3.py  spitest.py  test.py  video.py
